<resources>
    <string name="app_name">Chengeta APU</string>
    <string name="table_title">Recent Events</string>
    <string name="event_data_title">Event at %1$s</string>
    <string name="event_data_date_label">Exact date</string>
    <string name="event_data_sound_label">Detected sound</string>
    <string name="event_data_certainty_label">Certainty</string>
    <string name="event_data_certainty_value">%1$d%% certain</string>
    <string name="event_data_coordinates_label">Event coordinates</string>
    <string name="event_data_listen_label">Listen to sound</string>
    <string name="event_data_coordinates_longitude_value">Longitude: %1$f</string>
    <string name="event_data_coordinates_latitude_value">Latitude: %1$f</string>
    <string name="create_account_title">Create Account</string>
    <string name="create_account_hint_username">New username</string>
    <string name="create_account_hint_password">New password</string>
    <string name="create_account_hint_firstname">First Name</string>
    <string name="create_account_hint_lastname">Surname</string>
    <string name="create_account_hint_password_confirm">Confirm password</string>
    <string name="create_account_submit">Create</string>
    <string name="delete_account_title">Delete User</string>
    <string name="delete_account_hint_username">Username to delete</string>
    <string name="delete_account_delete">Delete</string>
    <string name="edit_account_title">Edit Account</string>
    <string name="edit_account_hint_username">Account Username</string>
    <string name="edit_account_hint_password">New password</string>
    <string name="edit_account_hint_password_confirm">Confirm password</string>
    <string name="edit_account_submit">Edit</string>
    <string name="role_select_text">Admin Account</string>
    <string name="goBackText">Back</string>
    <string name="logInText">Log In</string>
    <string name="userNameText">Username</string>
    <string name="passWordText">Password</string>
    <string name="timeText">Time</string>
    <string name="soundText">Sound</string>
    <string name="percentageText">%</string>
    <string name="statusText">Status</string>
    <string name="soundPlayButton">Play Sound</string>
    <string name="log_out">Log out</string>
    <string name="userTitle">Account Overview</string>
    <string name="userRole">Role</string>
    <string name="userAction">Moderate</string>
    <string name="userSearchHint">Search for user...</string>
    <string name="credAddTitle">Edit personalia</string>
    <string name="enter_name_hint_firstName">First Name</string>
    <string name="enter_name_hint_lastName">Surname</string>
    <string name="enter_name_submit">Submit</string>
    <string name="event_status">Event status</string>


</resources>