<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary">

    <TextView
        style="@style/Table.TextView.Header"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:text="@string/timeText" />

    <TextView
        style="@style/Table.TextView.Header"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/soundText" />

    <TextView
        style="@style/Table.TextView.Header"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:text="@string/percentageText" />

    <TextView
        style="@style/Table.TextView.Header"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:text="@string/statusText" />

</LinearLayout>