<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp">

    <TextView
        android:id="@+id/accCreateTitle"
        style="@style/createAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/create_account_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameField"
        style="@style/createAccountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_hint_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/accCreateTitle"
        app:startIconDrawable="@drawable/ic_user">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usernameTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passWordField"
        style="@style/createAccountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_account_hint_password"
        app:layout_constraintTop_toBottomOf="@id/userNameField"
        app:startIconDrawable="@drawable/ic_password">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordTextInputEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/roleSelect"
        style="@style/createAccountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passWordField"
        app:layout_constraintLeft_toLeftOf="parent">
    <Spinner
        android:id="@+id/roleSelectField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passWordField"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roleSelect"
        android:text="@string/create_account_submit"/>



</androidx.constraintlayout.widget.ConstraintLayout>