<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventInfoConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:padding="24dp">

    <TextView
        android:id="@+id/eventDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Type (0h 0m 0s ago)" />

    <ImageButton
        android:id="@+id/targetButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="false"
        android:background="@drawable/drawable_circle_outline"
        android:padding="10dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_location_searching_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?android:attr/textColorSecondary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eventStatusConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/eventDetailsTitle">

        <TextView
            android:id="@+id/statusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Event Status"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/statusValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statusLabel"
            tools:text="Status: New" />

        <ImageView
            android:id="@+id/eventStatusIconImageView"
            android:layout_width="20sp"
            android:layout_height="20sp"
            android:src="@drawable/ic_baseline_edit_24"
            app:tint="?android:attr/textColorSecondary"
            app:layout_constraintStart_toEndOf="@id/statusLabel"
            app:layout_constraintTop_toTopOf="@id/statusLabel"
            app:layout_constraintBottom_toBottomOf="@id/statusLabel"
            android:layout_marginLeft="6dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/soundLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/event_data_sound_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eventStatusConstraintLayout" />

    <TextView
        android:id="@+id/soundValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soundLabel"
        tools:text="Sound Name" />

    <TextView
        android:id="@+id/certaintyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/event_data_certainty_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/soundValue" />

    <TextView
        android:id="@+id/certaintyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/certaintyLabel"
        tools:text="58% certain" />

    <TextView
        android:id="@+id/coordinatesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/event_data_coordinates_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/certaintyValue" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordinatesTitle"
        tools:text="Longitude: 0.000000" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/longitude"
        tools:text="Latitude: 0.000000" />

    <TextView
        android:id="@+id/dateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/event_data_date_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latitude" />

    <TextView
        android:id="@+id/dateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateLabel"
        tools:text="22/12/2022, 01:54:23" />

    <TextView
        android:id="@+id/listenLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/event_data_listen_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateValue" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/soundPlayButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="14dp"
        android:text="@string/soundPlayButton"
        android:textColor="?android:attr/textColorSecondary"
        app:icon="@drawable/drawable_play_arrow"
        app:iconSize="20dp"
        app:iconTint="?android:attr/textColorSecondary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listenLabel" />

    <ProgressBar
        android:id="@+id/soundLoadingCircle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:indeterminate="true"
        android:indeterminateTint="?android:attr/textColorSecondary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/soundPlayButton"
        app:layout_constraintLeft_toLeftOf="@id/soundPlayButton"
        app:layout_constraintTop_toTopOf="@id/soundPlayButton" />

</androidx.constraintlayout.widget.ConstraintLayout>